--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "carousel": "^0.0.3",
+    "i18next": "^21.8.3",
     "next": "12.1.0",
-    "react": "17.0.2",
+    "next-intl": "^2.7.2",
+    "react": "^18.1.0",
     "react-dom": "17.0.2",
     "react-fast-marquee": "^1.3.1",
     "react-infinite-scroll-component": "^6.1.0",
